objects/FSL_PCode__c.object
<CustomObject>
    <fields>
        <fullName>Algorithm_Description__c</fullName>
        <label>Algorithm Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDS_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cummins_Description__c</fullName>
        <label>Cummins Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cummins_Fault_Code__c</fullName>
        <label>Cummins Fault Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>J1939_FMI__c</fullName>
        <label>J1939 FMI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>J2012_PCode__c</fullName>
        <label>J2012 PCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp_Color__c</fullName>
        <label>Lamp Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp_Device__c</fullName>
        <label>Lamp Device</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageKey__c</fullName>
        <label>LanguageKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_in_CES_14602__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published in CES 14602</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPN__c</fullName>
        <label>SPN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PCode</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>